--- a/splitChunks/src/index/index.html
+++ b/splitChunks/src/index/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  ${ require('raw-loader!./meta.html')}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script>
+ ${ require('raw-loader!babel-loader!../../node_modules/lib-flexible/flexible.js')}
+  </script>
+
 </head>
 <body>
   <div id="app">
 
   </div>
-  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 </body>
 </html>
