--- a/index.html
+++ b/index.html
@@ -1,37 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    *{
-      margin: 0;
-      padding: 0;
-    }
-    .box1{
-      width: 400px;
-      height: 4000px;
-      background: red;
-      position: relative;
-    }
-    .box2{
-      width: 200px;
-      height: 200px;
-      background: #ffffff;
-      position: sticky;
-      top: 100px;
-    }
+
   </style>
 </head>
-<body>
-  <div class="box1">
-    <div class="box2">
 
-    </div>
-  </div>
+<body>
+
   <script>
-   
+    try {
+      console.log(a); // undefined
+      aa.c;
+    } catch (e) {
+      console.log(e)
+      let a = 1;
+    }
+    console.log(a); // 1
+    console.log(e); // Uncaught ReferenceError: e is not defined
   </script>
 </body>
+
 </html>
